# dakirby

./: .gitignore  MANIFEST.in  README.md  da_kirby.py  pyproject.toml  setup.py
.github/workflows/: publish.yml
docs/: a2j_structure.md  hotdocs_structure.md
src/dakirby/: __init__.py  cli.py
src/dakirby/core/: a2jauthor.py  common.py  docassemble.py  hotdocs.py
src/dakirby/core/hotdocs/: __init__.py  hotdocs.py  scripts.py
