[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dakirby"
dynamic = ["version"]
requires-python= ">=3.10"
authors = [
  {name = "Bryce Willey"}
]
keywords = ["docassemble", "a2jauthor", "hotdocs"]
classifiers = [
  "Developement States :: 2 - Pre-Alpha",
  "Intended Audience :: Legal Industry",
  "Programming Language :: Python :: 3.10",
]

dependencies = [
  "lxml"
]

[project.scripts]
dakirby = "dakirby.cli:main"

[project.urls]
Homepage = "https://github.com/BryceStevenWilley/dakirby"
Repository = "https://github.com/BryceStevenWilley/dakirby.git"
Issues = "https://github.com/BryceStevenWilley/dakirby/issues"

[tool.setuptools]
include-package-data = true
